# dota2-coach

./: .dockerignore  .gitignore  Makefile  lint-staged.config.js  package-lock.json  package.json
.codex/skills/clarify-before-assume/: SKILL.md
.codex/skills/pragmatic-codestyle/: SKILL.md
apps/runtime/: .prettierrc  eslint.config.js  jest.config.js  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
apps/runtime/src/: main.spec.ts  main.ts
apps/runtime/src/bootstrap/: create-runtime.spec.ts  create-runtime.ts  create-serving-runtime.spec.ts  create-serving-runtime.ts  run-application.ts  (+5 more)
apps/runtime/test/: smoke-built-runtime.mjs
apps/tts/: README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
apps/tts/scripts/: check.sh  smoke.py
apps/tts/src/tts_service/: __init__.py  api.py  config.py  contracts.py  inference_supervisor.py  inference_worker.py  main.py  silero_engine.py  wav.py
apps/tts/tests/: test_api.py  test_config.py  test_inference_supervisor.py  test_inference_worker.py  test_main.py  test_silero_engine.py  test_wav.py
docs/: dota2_ai_coach_draft_plan.md  dota2_ai_coach_mvp_spec.md  gsi_turbo_match_report.md
docs/plans/: 01_RUNTIME_BASE_VERTICAL_PLAN.md  02_MATCH_CONTEXT_VERTICAL_PLAN.md  03_LOST_RECOMMENDATION_VERTICAL_PLAN.md  04_DISCORD_INTERACTION_VERTICAL_PLAN.md  05_SPEECH_TTS_VOICE_VERTICAL_PLAN.md  RUNTIME_BASE_VERTICAL_PLAN.md
ops/clients/dota-gsi/: gamestate_integration_dota2_coach.local.cfg
ops/dev/: .env.example  README.md  docker-compose.yml
ops/services/runtime/: Dockerfile
ops/services/tts/: Dockerfile
(+172 files in other folders)
