[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "dota2-coach-tts"
version = "0.1.0"
description = "Private deterministic speech synthesis service for Dota 2 Coach"
requires-python = ">=3.11,<3.12"
dependencies = [
  "PyYAML>=6.0.2",
  "starlette>=0.47.0",
  "uvicorn>=0.35.0",
]

[dependency-groups]
runtime = [
  "torch==2.12.0+cpu",
]
test = [
  "httpx>=0.28.1",
  "mypy>=1.17.0",
  "pytest>=8.4.0",
  "pytest-asyncio>=1.1.0",
  "ruff>=0.12.0",
  "types-PyYAML>=6.0.12.20250516",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[tool.hatch.build.targets.wheel]
packages = ["src/tts_service"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "RUF", "SIM", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]
